[tool.poetry]
name = "pyner"
version = "0.1.0"
description = ""
authors = ["himkt"]

[tool.poetry.dependencies]
python = "^3.6"
chainer = "^7.7.0"
gensim = "^3.8.3"
seqeval = "^1.2.2"
PyYAML = "^5.3.1"
click = "^7.1.2"
scikit-learn = "^0.24.0"
chainerui = "^0.11.0"
cupy-cuda102 = "7.8.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
